# Proyecto-II-estructura-de-Datos-II

./: CMakeLists.txt  diagramawidget.cpp  diagramawidget.h  diskmanager.cpp  diskmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  structuras.h
